--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@
 
 .title {
   position: absolute;
-  top: 0;
+  top: 10%;
   left: 0;
   color: white;
   font-family: 'Courier New', Courier, monospace;
@@ -35,7 +35,8 @@
   align-items: center;
 
   width: 100%;
-  height: 100vh;
+  height: auto;
+font-size: 1rem;
   text-shadow: 0 0 20px white;
   letter-spacing: 0px;
 }
@@ -89,7 +90,7 @@ a {
 .text {
   font-weight: 600;
   color: #AAAAAA;
-  font-size: small;
+  font-size: medium;
 }
 
 .btn:hover {
